k8s/manifests/dns-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-server
  namespace: squawk
  labels:
    app.kubernetes.io/name: squawk
    app.kubernetes.io/component: dns-server
    app.kubernetes.io/instance: dns-server
spec:
  type: ClusterIP
  ports:
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
  - name: doh
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: squawk
    app.kubernetes.io/component: dns-server
    app.kubernetes.io/instance: dns-server
