k8s/manifests/flask-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api
  namespace: squawk
  labels:
    app.kubernetes.io/name: squawk
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: flask-api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app.kubernetes.io/name: squawk
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: flask-api
